--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
                     <li class="content__list-item">
                         <a href="lesson2/index.html">Урок 2</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="html-14/index.html">Урок 14</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson-20/index.html">Урок 20</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
