--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
                     <li class="content__list-item">
                         <a href="lesson-55.hw/index.html">Урок 55</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="lesson-57.hw/index.html">Урок 57</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
