--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
                     <li class="content__list-item">
                         <a href="lesson-59.hw/index.html">Урок 59</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="lesson-61.hw/index.html">Урок 61</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
