--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <a href="lesson-61.hw/index.html">Урок 61</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="lesson-69.hw/index.html">Уроки 69-73</a>
+                        <a href="lesson-69hw/index.html">Уроки 69-73</a>
                     </li>
                 </ul>
             </div>
