--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
                     </li>
                     <li class="content__list-item">
                         <a href="lesson-61.hw/index.html">Урок 61</a>
-                    </li>                    
+                    </li>                                       
                     <li class="content__list-item">
-                        <a href="lesson-69.hw/index.html">Уроки 69-73</a>
-                    </li>                    
+                        <a href="lesson-69.hw/index.html">Урок 69-73</a>
+                    </li>                                       
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
