--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
                     <li class="content__list-item">
                         <a href="lesson-69.hw/index.html">Урок 69-73</a>
                     </li>                                       
+                    <li class="content__list-item">
+                        <a href="lesson-76.hw/index.html">Урок 76</a>
+                    </li>                                       
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
