--- a/index.html
+++ b/index.html
@@ -140,6 +140,12 @@
                     <li class="content__list-item">
                         <a href="lesson-76.hw/index.html">Урок 76</a>
                     </li>                                       
+                    <li class="content__list-item">
+                        <a href="lesson-79.hw/index.html">Урок 79</a>
+                    </li>                                       
+                    <li class="content__list-item">
+                        <a href="lesson-80.hw/index.html">Урок 80</a>
+                    </li>                                       
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
