--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                         <a href="lesson-79.hw/index.html">Урок 79</a>
                     </li>                                                                        
                     <li class="content__list-item">
-                        <a href="lesson-80 .hw/index.html">Урок 80</a>
-                    </li>                                                                        
+                        <a href="lesson-80 .hw.2/index.html">Урок 80</a>
+                    </li>                                                                            
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
