--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
                     <li class="content__list-item">
                         <a href="lesson-80 .hw.2/index.html">Урок 80</a>
                     </li>                                                                            
+                    <li class="content__list-item">
+                        <a href="lesson-81.hw.2/index.html">Урок 81</a>
+                    </li>                                                                            
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
