--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <a href="lesson-80 .hw.2/index.html">Урок 80</a>
                     </li>                                                                            
                     <li class="content__list-item">
-                        <a href="lesson-81.hw.2/index.html">Урок 81</a>
+                        <a href="lesson-81.hw/index.html">Урок 81</a>
                     </li>                                                                            
                 </ul>
             </div>
