--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
                     <li class="content__list-item">
                         <a href="lesson-81.hw/index.html">Урок 81</a>
                     </li>                                                                                              
+                    <li class="content__list-item">
+                        <a href="lesson-82.hw/index.html">Урок 82</a>
+                    </li>                                                                                              
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
