--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         <a href="lesson-92/index.html">Урок 92</a>
                     </li>                                                                                              
                     <li class="content__list-item">
-                        <a href="lesson-96.hw/wake&bake//wake-bake/index.html">Урок 96</a>
+                        <a href="lesson-96.hw/wake&bake/wake-bake/index.html">Урок 96</a>
                     </li>                                                                                              
                 </ul>
             </div>
