--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@
                     <li class="content__list-item">
                         <a href="lesson-96.hw/wake&bake/wake-bake/index.html">Урок 96</a>
                     </li>                                                                                              
+                    <li class="content__list-item">
+                        <a href="lesson-100.hw/wake&bake/wake-bake/index.html">Урок 100</a>
+                    </li>                                                                                              
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
