--- a/lesson-100.hw/wake&bake/wake-bake/index.html
+++ b/lesson-100.hw/wake&bake/wake-bake/index.html
@@ -66,7 +66,7 @@
                             </a>
                         </div>
                         <div class="hero__img">
-                            <img src="/img/people/girl-1.png" alt="Девушка с тортом в руках">
+                            <img src="img/people/girl-1.png" alt="Девушка с тортом в руках">
                             <div class="hero__img-play">
                                 <a href="media/cake.mp4" data-fslightbox class="hero__img-button">
                                     <img src="img/icons/play.svg" alt="">
