--- a/index.html
+++ b/index.html
@@ -167,6 +167,9 @@
                     <li class="content__list-item">
                         <a href="lesson-101.hw/wake&bake/wake-bake/index.html">Урок 101</a>
                     </li>                                                                                              
+                    <li class="content__list-item">
+                        <a href="lesson-102.hw/wake&bake/wake-bake/index.html">Урок 102</a>
+                    </li>                                                                                              
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
