--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@
                     <li class="content__list-item">
                         <a href="lesson-104.hw/wake&bake/wake-bake/index.html">Урок 104</a>
                     </li>                                                                                              
+                    <li class="content__list-item">
+                        <a href="lesson-106.hw/wake&bake/wake-bake/index.html">Урок 106</a>
+                    </li>                                                                                              
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
