--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@
                     <li class="content__list-item">
                         <a href="lesson-106.hw/wake&bake/wake-bake/index.html">Урок 106</a>
                     </li>                                                                                              
+                    <li class="content__list-item">
+                        <a href="lesson-107.hw/wake&bake/wake-bake/index.html">Урок 107</a>
+                    </li>                                                                                              
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
