--- a/index.html
+++ b/index.html
@@ -185,6 +185,9 @@
                     <li class="content__list-item">
                         <a href="lesson-109.hw/wake&bake/wake-bake/index.html">Урок 109</a>
                     </li>                                                                                              
+                    <li class="content__list-item">
+                        <a href="lesson-110.hw/wake&bake/wake-bake/index.html">Урок 110</a>
+                    </li>                                                                                              
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
