--- a/index.html
+++ b/index.html
@@ -188,6 +188,9 @@
                     <li class="content__list-item">
                         <a href="lesson-110.hw/wake&bake/wake-bake/index.html">Урок 110</a>
                     </li>                                                                                              
+                    <li class="content__list-item">
+                        <a href="lesson-111,112.hw/wake&bake/wake-bake/index.html">Уроки 111, 112</a>
+                    </li>                                                                                              
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
