--- a/index.html
+++ b/index.html
@@ -197,6 +197,9 @@
                     <li class="content__list-item">
                         <a href="lesson-115,116.hw/wake&bake/wake-bake/index.html">Уроки 115, 116</a>
                     </li>                                                                                              
+                    <li class="content__list-item">
+                        <a href="lesson-117.hw/wake&bake/wake-bake/index.html">Уроки 117</a>
+                    </li>                                                                                              
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
