--- a/index.html
+++ b/index.html
@@ -198,7 +198,10 @@
                         <a href="lesson-115,116.hw/wake&bake/wake-bake/index.html">Уроки 115, 116</a>
                     </li>                                                                                              
                     <li class="content__list-item">
-                        <a href="lesson-117.hw/wake&bake/wake-bake/index.html">Уроки 117</a>
+                        <a href="lesson-117.hw/wake&bake/wake-bake/index.html">Урок 117</a>
+                    </li>                                                                                              
+                    <li class="content__list-item">
+                        <a href="lesson-118,119.hw/wake&bake/wake-bake/index.html">Уроки 118, 119</a>
                     </li>                                                                                              
                 </ul>
             </div>
