--- a/lesson-118,119.hw/wake&bake/wake-bake/index.html
+++ b/lesson-118,119.hw/wake&bake/wake-bake/index.html
@@ -721,34 +721,34 @@
                     <div class="gallery__slider swiper">                        
                         <div class="gallery__wrapper swiper-wrapper">                        
                             <div class="gallery__slide swiper-slide">
-                                <img src="/img/people/gallery/1.jpg" alt="">
+                                <img src="img/people/gallery/1.jpg" alt="">
                             </div>
                             <div class="gallery__slide swiper-slide">
-                                <img src="/img/people/gallery/2.jpg" alt="">
+                                <img src="img/people/gallery/2.jpg" alt="">
                             </div>
                             <div class="gallery__slide swiper-slide">
-                                <img src="/img/people/gallery/3.jpg" alt="">
+                                <img src="img/people/gallery/3.jpg" alt="">
                             </div>                        
                             <div class="gallery__slide swiper-slide">
-                                <img src="/img/people/gallery/4.jpg" alt="">
+                                <img src="img/people/gallery/4.jpg" alt="">
                             </div>                        
                             <div class="gallery__slide swiper-slide">
-                                <img src="/img/people/gallery/2.jpg" alt="">
+                                <img src="img/people/gallery/2.jpg" alt="">
                             </div>
                             <div class="gallery__slide swiper-slide">
-                                <img src="/img/people/gallery/3.jpg" alt="">
+                                <img src="img/people/gallery/3.jpg" alt="">
                             </div>                        
                             <div class="gallery__slide swiper-slide">
-                                <img src="/img/people/gallery/4.jpg" alt="">
+                                <img src="img/people/gallery/4.jpg" alt="">
                             </div>
                             <div class="gallery__slide swiper-slide">
-                                <img src="/img/people/gallery/4.jpg" alt="">
+                                <img src="img/people/gallery/4.jpg" alt="">
                             </div>                        
                             <div class="gallery__slide swiper-slide">
-                                <img src="/img/people/gallery/2.jpg" alt="">
+                                <img src="img/people/gallery/2.jpg" alt="">
                             </div>
                             <div class="gallery__slide swiper-slide">
-                                <img src="/img/people/gallery/3.jpg" alt="">
+                                <img src="img/people/gallery/3.jpg" alt="">
                             </div>                                        
                         </div>                       
                     </div>                  
