--- a/index.html
+++ b/index.html
@@ -200,8 +200,11 @@
                     <li class="content__list-item">
                         <a href="lesson-117.hw/wake&bake/wake-bake/index.html">Урок 117</a>
                     </li>                                 
-                     <li class="content__list-item">
+                    <li class="content__list-item">
                         <a href="lesson-118,119.hw/wake&bake/wake-bake/index.html">Уроки 118, 119</a>
+                    </li>                                                                                            
+                    <li class="content__list-item">
+                        <a href="lesson-120.hw/wake&bake/wake-bake/index.html">Урок 120</a>
                     </li>                                                                                            
                 </ul>
             </div>
