--- a/index.html
+++ b/index.html
@@ -206,6 +206,9 @@
                     <li class="content__list-item">
                         <a href="lesson-120.hw/wake&bake/wake-bake/index.html">Урок 120</a>
                     </li>                                                                                            
+                    <li class="content__list-item">
+                        <a href="lesson-121.hw/wake&bake/wake-bake/index.html">Урок 121</a>
+                    </li>                                                                                            
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
