--- a/index.html
+++ b/index.html
@@ -209,6 +209,9 @@
                     <li class="content__list-item">
                         <a href="lesson-121.hw/wake&bake/wake-bake/index.html">Урок 121</a>
                     </li>                                                                                            
+                    <li class="content__list-item">
+                        <a href="lesson-123,124.hw/wake&bake/wake-bake/index.html">Уроки 123,124</a>
+                    </li>                                                                                            
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
