--- a/index.html
+++ b/index.html
@@ -212,6 +212,9 @@
                     <li class="content__list-item">
                         <a href="lesson-123,124.hw/wake&bake/wake-bake/index.html">Уроки 123,124</a>
                     </li>                                                                                            
+                    <li class="content__list-item">
+                        <a href="lesson-125,126.hw/wake&bake/wake-bake/index.html">Уроки 125,126</a>
+                    </li>                                                                                            
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
