--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             <div class="content__block hidden" id="diplomBlock">
                 <div class="content__title">Дипломный проект</div>
                 <div class="content__list-diplom">
-                    <a href="diploma#1/noeks/index.html">Ссылка на ДЗ</a>
+                    <a href="diploma#1/noeks/noeks/index.html">Ссылка на ДЗ</a>
                 </div>
                 <div class="content__decor">
                     <div class="content__decor-text">Давай проверим, чему ты научился!</div>
