--- a/index.html
+++ b/index.html
@@ -216,14 +216,14 @@
                         <a href="lesson-125,126.hw/wake&bake/wake-bake/index.html">Уроки 125,126</a>
                     </li>                                                                                            
                     <li class="content__list-item">
-                        <a href="diplom#1/noeks/index.html">Дипломный проект №1</a>
+                        <a href="diplom-1/noeks/index.html">Дипломный проект №1</a>
                     </li>                                                                                            
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
                 <div class="content__title">Дипломный проект</div>
                 <div class="content__list-diplom">
-                    <a href="diplom#1/noeks/index.html">Ссылка на ДЗ</a>
+                    <a href="diplom-1/noeks/index.html">Ссылка на ДЗ</a>
                 </div>
                 <div class="content__decor">
                     <div class="content__decor-text">Давай проверим, чему ты научился!</div>
